Change API key check to ensure configuration

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
             statusDiv.className = 'status-message';
 
             // Check if keys are set
-            if (API_KEY === '380808414852-kkcu99c9d7jnh5neu2gb5nmke2tk66aa.apps.googleusercontent.com' || SEARCH_ENGINE_ID === '3648ac1efa7cd4f97') {
+            if (API_KEY !== '380808414852-kkcu99c9d7jnh5neu2gb5nmke2tk66aa.apps.googleusercontent.com' || SEARCH_ENGINE_ID !== '3648ac1efa7cd4f97') {
                 showError("Please configure your API_KEY and SEARCH_ENGINE_ID in the script section.");
                 return;
             }
