--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 <body>
 
     <header>
-        <h1>Image Search</h1>
+        <h1>Let's Go viral</h1>
         <div class="search-container">
             <input type="text" id="searchInput" placeholder="Search for images..." autofocus>
             <button id="searchBtn">Search</button>
